# case-cadastra

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/client/: base_client.py  coincap_client.py
src/examples/: slug_history.json  slug_markets.json
src/model/: cryptocurrency.py  sql_models.py
src/repository/: base_repository.py  crypto_repository.py
src/service/: crypto_service.py
src/util/: db.py  logger.py
terraform/: main.tf  variables.tf
tests/model/: test_models.py
